force-app/main/default/objects/Sales_Lead__c/Sales_Lead__c.object-meta.xml
<CustomObject>
    <label>Sales Lead</label>
    <nameField>
        <label>Sales Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>