force-app/main/default/objects/Sales_Lead__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contract Account</description>
    <inlineHelpText>Required Information only for HQ users when creating IT Sales Lead / Required information when converting</inlineHelpText>
    <label>Account(*)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>