force-app/main/default/objects/Sales_Lead__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>예상금액</description>
    <inlineHelpText>Required Information only for HQ users when creating IT Sales Lead / Required information when converting</inlineHelpText>
    <label>Amount(*)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>