force-app/main/default/objects/Sales_Lead__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>권한</description>
    <inlineHelpText>Whether the customer in charge has obtained the right to perform the business (change the stage to Hot when satisfying two or more BANTs)</inlineHelpText>
    <label>Authority</label>
    <type>Checkbox</type>
</CustomField>