force-app/main/default/objects/Sales_Lead__c/fields/BizTeamAttributes01__c.field-meta.xml
<CustomField>
    <fullName>BizTeamAttributes01__c</fullName>
    <inlineHelpText>This is an item field managed by the business team. You can freely define and utilize within each business team. ex) Whether to secure customer budget, department responsible for customer, etc.</inlineHelpText>
    <label>Sales Team Attributes01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>