force-app/main/default/objects/Sales_Lead__c/fields/BizTeamAttributes02__c.field-meta.xml
<CustomField>
    <fullName>BizTeamAttributes02__c</fullName>
    <label>Sales Team Attributes02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>