force-app/main/default/objects/Sales_Lead__c/fields/BizTeamAttributes03__c.field-meta.xml
<CustomField>
    <fullName>BizTeamAttributes03__c</fullName>
    <label>Sales Team Attributes03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>