force-app/main/default/objects/Sales_Lead__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>예산확보 여부</description>
    <inlineHelpText>Whether to have a customer budget (change the stage to Hot when satisfying two or more BANTs)</inlineHelpText>
    <label>Budget</label>
    <type>Checkbox</type>
</CustomField>