force-app/main/default/objects/Sales_Lead__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>캠페인</description>
    <label>Campaign ID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>BO_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>