force-app/main/default/objects/Sales_Lead__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>예상수주일자</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>