force-app/main/default/objects/Sales_Lead__c/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <description>Sales Lead Close Reason</description>
    <inlineHelpText>Sales Close Reason Registration</inlineHelpText>
    <label>Close Reason</label>
    <length>225</length>
    <type>Text</type>
</CustomField>