force-app/main/default/objects/Sales_Lead__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>고객사 명</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>