force-app/main/default/objects/Sales_Lead__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <formula>IF( RecordType.Name = &apos;HQ&apos; , SalesDepartment__r.Company__r.CompanyCode__c , SalesOrganization__r.Company__r.CompanyCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>