force-app/main/default/objects/Sales_Lead__c/fields/Converted_by_user_setting__c.field-meta.xml
<CustomField>
    <fullName>Converted_by_user_setting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted By User Setting</label>
    <type>Checkbox</type>
</CustomField>