force-app/main/default/objects/Sales_Lead__c/fields/CustomerContactDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerContactDate__c</fullName>
    <label>Customer Contact Date</label>
    <type>DateTime</type>
</CustomField>