force-app/main/default/objects/Sales_Lead__c/fields/DeliveryDivision__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDivision__c</fullName>
    <formula>DeliveryDepartment__r.Text2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Dept. 1</label>
    <type>Text</type>
</CustomField>