force-app/main/default/objects/Sales_Lead__c/fields/DeliveryTeam__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTeam__c</fullName>
    <formula>DeliveryDepartment__r.Text4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Dept. 2</label>
    <type>Text</type>
</CustomField>