force-app/main/default/objects/Sales_Lead__c/fields/Demand_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Demand_Owner_ID__c</fullName>
    <label>Demand Owner ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>