force-app/main/default/objects/Sales_Lead__c/fields/deptHeadNotiYN__c.field-meta.xml
<CustomField>
    <fullName>deptHeadNotiYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deptHeadNotiYN</label>
    <type>Checkbox</type>
</CustomField>