force-app/main/default/objects/Sales_Lead__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Sales Lead 개요</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>