force-app/main/default/objects/Sales_Lead__c/fields/ELOQUAID__c.field-meta.xml
<CustomField>
    <fullName>ELOQUAID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ELOQUA ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>