force-app/main/default/objects/Sales_Lead__c/fields/EloquaLeadCreationDate__c.field-meta.xml
<CustomField>
    <fullName>EloquaLeadCreationDate__c</fullName>
    <label>Eloqua Lead Creation Date</label>
    <type>DateTime</type>
</CustomField>