force-app/main/default/objects/Sales_Lead__c/fields/EloquaOptInDate__c.field-meta.xml
<CustomField>
    <fullName>EloquaOptInDate__c</fullName>
    <label>Eloqua Opt In Date</label>
    <type>DateTime</type>
</CustomField>