force-app/main/default/objects/Sales_Lead__c/fields/InterestSubject1__c.field-meta.xml
<CustomField>
    <fullName>InterestSubject1__c</fullName>
    <label>Interest Subject 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>