force-app/main/default/objects/Sales_Lead__c/fields/InterestSubject2__c.field-meta.xml
<CustomField>
    <fullName>InterestSubject2__c</fullName>
    <label>Interest Subject 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>