force-app/main/default/objects/Sales_Lead__c/fields/Internal_External__c.field-meta.xml
<CustomField>
    <fullName>Internal_External__c</fullName>
    <inlineHelpText>Required Information only for HQ users when creating IT Sales Lead  / Required information when converting</inlineHelpText>
    <label>Internal/External(*)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
                <default>true</default>
                <label>Undefined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>