force-app/main/default/objects/Sales_Lead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead ID</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>BO_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>