force-app/main/default/objects/Sales_Lead__c/fields/LeadChannel__c.field-meta.xml
<CustomField>
    <fullName>LeadChannel__c</fullName>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Registration</fullName>
            </value>
            <value>
                <fullName>Marketing Lead Converted</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>