force-app/main/default/objects/Sales_Lead__c/fields/LeadDescription__c.field-meta.xml
<CustomField>
    <fullName>LeadDescription__c</fullName>
    <description>Marketing Lead&apos;s Description</description>
    <label>Marketing Lead Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>