force-app/main/default/objects/Sales_Lead__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web Inquiry</fullName>
            </value>
            <value>
                <fullName>Asset Download</fullName>
            </value>
            <value>
                <fullName>Newsletter Subscribe</fullName>
            </value>
            <value>
                <fullName>EBC Inquiry</fullName>
            </value>
            <value>
                <fullName>Partner apply</fullName>
            </value>
            <value>
                <fullName>global network</fullName>
            </value>
            <value>
                <fullName>Offline Event</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Exhibition/Tradeshow</fullName>
            </value>
            <value>
                <fullName>MyTrial Members</fullName>
            </value>
            <value>
                <fullName>MyTrial User</fullName>
            </value>
            <value>
                <fullName>Targeted Landingpage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>