force-app/main/default/objects/Sales_Lead__c/fields/LeadStage__c.field-meta.xml
<CustomField>
    <fullName>LeadStage__c</fullName>
    <description>Lead Stage</description>
    <label>Lead Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
                <color>#33CCFF</color>
                <label>Cold</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <color>#FF9900</color>
                <label>Warm</label>
            </value>
            <value>
                <fullName>Hot</fullName>
                <color>#FF0000</color>
                <label>Hot</label>
            </value>
            <value>
                <fullName>Converted</fullName>
                <color>#BBBBBB</color>
                <label>Converted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>