force-app/main/default/objects/Sales_Lead__c/fields/LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadStatus__c</fullName>
    <description>Sales Lead Status</description>
    <inlineHelpText>Sales Lead Status</inlineHelpText>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>