force-app/main/default/objects/Sales_Lead__c/fields/LeadType__c.field-meta.xml
<CustomField>
    <fullName>LeadType__c</fullName>
    <description>Sales Lead Type</description>
    <inlineHelpText>Sales Lead Type</inlineHelpText>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadChannel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Business</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Technical Support</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>System Enhancement</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>New System</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Solution/Service</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Consulting</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Seminar</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>IT Trend / Research</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Benchmarking</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>Etc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>