force-app/main/default/objects/Sales_Lead__c/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>요구 구체화</description>
    <inlineHelpText>Whether to specify customer requirements &amp; business scope (change the stage to Hot when satisfying two or more BANTs)</inlineHelpText>
    <label>Needs</label>
    <type>Checkbox</type>
</CustomField>