force-app/main/default/objects/Sales_Lead__c/fields/Owner_Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Time__c</fullName>
    <label>Owner Change Time</label>
    <type>DateTime</type>
</CustomField>