force-app/main/default/objects/Sales_Lead__c/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <formula>Owner:User.Email</formula>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>