force-app/main/default/objects/Sales_Lead__c/fields/PersonalInfoAgreement__c.field-meta.xml
<CustomField>
    <fullName>PersonalInfoAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Info. Agreement</label>
    <type>Checkbox</type>
</CustomField>