force-app/main/default/objects/Sales_Lead__c/fields/PersonalInfoAgreementExpireDate__c.field-meta.xml
<CustomField>
    <fullName>PersonalInfoAgreementExpireDate__c</fullName>
    <label>Personal Info. Agreement Expire Date</label>
    <type>DateTime</type>
</CustomField>