force-app/main/default/objects/Sales_Lead__c/fields/Requester_ID__c.field-meta.xml
<CustomField>
    <fullName>Requester_ID__c</fullName>
    <label>Requester ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>