force-app/main/default/objects/Sales_Lead__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <label>Requester Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>