force-app/main/default/objects/Sales_Lead__c/fields/RevenueEndDate__c.field-meta.xml
<CustomField>
    <fullName>RevenueEndDate__c</fullName>
    <description>(계약) 매출 종료일</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>