force-app/main/default/objects/Sales_Lead__c/fields/RevenueStartDate__c.field-meta.xml
<CustomField>
    <fullName>RevenueStartDate__c</fullName>
    <description>(계약) 매출 시작일</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>