force-app/main/default/objects/Sales_Lead__c/fields/Sales_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Alert_Date__c</fullName>
    <label>Sales Alert Date</label>
    <type>DateTime</type>
</CustomField>