force-app/main/default/objects/Sales_Lead__c/fields/Sales_Team_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Amount1__c</fullName>
    <label>Sales Team Amount1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>