force-app/main/default/objects/Sales_Lead__c/fields/SalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Required Information only for HQ users when creating IT Sales Lead / Required information when converting</inlineHelpText>
    <label>Sales Dept. 3(*)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
        <errorMessage>Closed departments cannot be selected.</errorMessage>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Custom System Administrator, System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notEqual</operation>
            <value>Custom System Administrator, System Administrator</value>
        </filterItems>
        <filterItems>
            <field>CostCenter__c.Closed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$User.CompanyCode__c</field>
            <operation>equals</operation>
            <valueField>CostCenter__c.CompanyCode__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>