force-app/main/default/objects/Sales_Lead__c/fields/SalesDivision__c.field-meta.xml
<CustomField>
    <fullName>SalesDivision__c</fullName>
    <formula>SalesDepartment__r.Text2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Division</label>
    <type>Text</type>
</CustomField>