force-app/main/default/objects/Sales_Lead__c/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>