force-app/main/default/objects/Sales_Lead__c/fields/SalesRegion__c.field-meta.xml
<CustomField>
    <fullName>SalesRegion__c</fullName>
    <formula>IF( Text($User.LanguageLocaleKey) =&apos;ko&apos;,

CASE(TEXT( SalesOrganization__r.Region__c ),

&apos;P&apos;,&apos;동남아&apos;,
&apos;A&apos;,&apos;북미&apos;,
&apos;E&apos;,&apos;유럽&apos;,
&apos;C&apos;,&apos;중국&apos;,
&apos;L&apos;,&apos;중남미&apos;,
&apos;M&apos;,&apos;중아서&apos;,
&apos;H&apos;,&apos;대한민국&apos;,
&apos;Error&apos;)

,

CASE(TEXT( SalesOrganization__r.Region__c ),

&apos;P&apos;,&apos;PACIFIC&apos;,
&apos;A&apos;,&apos;NORTH AMERICA&apos;,
&apos;E&apos;,&apos;EUROPE&apos;,
&apos;C&apos;,&apos;CHINA&apos;,
&apos;L&apos;,&apos;LATIN AMERICA&apos;,
&apos;M&apos;,&apos;MEIA&apos;,
&apos;H&apos;,&apos;KOREA&apos;,
&apos;Error&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>