force-app/main/default/objects/Sales_Lead__c/fields/SalesTeam_Number1__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam_Number1__c</fullName>
    <label>Sales Team Number1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>