force-app/main/default/objects/Sales_Lead__c/fields/TimeLine__c.field-meta.xml
<CustomField>
    <fullName>TimeLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>발주시기 도래</description>
    <inlineHelpText>Whether customer order will occur (change the stage to Hot when satisfying two or more BANTs)</inlineHelpText>
    <label>Time Line</label>
    <type>Checkbox</type>
</CustomField>