force-app/main/default/objects/Sales_Lead__c/recordTypes/HQ.recordType-meta.xml
<RecordType>
    <fullName>HQ</fullName>
    <active>true</active>
    <label>HQ</label>
</RecordType>