force-app/main/default/objects/Sales_Lead__c/validationRules/ChangeStageCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeStageCheck</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( LeadStage__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(LeadStage__c ) , &apos;Converted&apos;) &amp;&amp; OpportunityName__c != null</errorConditionFormula>
    <errorDisplayField>LeadStage__c</errorDisplayField>
    <errorMessage>이미 Convert가 완료되었습니다.</errorMessage>
</ValidationRule>