force-app/main/default/objects/Sales_Lead__c/validationRules/CloseReason_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseReason_Check</fullName>
    <active>true</active>
    <description>사업기회 변환이 아닌 종결을 하는경우 종결의견 입력 여부 확인</description>
    <errorConditionFormula>AND(TEXT(LeadStage__c) != &apos;Converted&apos;, TEXT(LeadStatus__c) = &apos;Close&apos;, ISBLANK(CloseReason__c))</errorConditionFormula>
    <errorDisplayField>CloseReason__c</errorDisplayField>
    <errorMessage>Please enter a Close reason for closing.</errorMessage>
</ValidationRule>