force-app/main/default/objects/Sales_Lead__c/validationRules/ContactDate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactDate_Check</fullName>
    <active>false</active>
    <description>사업리드 종료처리 시 고객컨택일시가 공백이거나 현재 일자보다 이후인 경우 저장 불가능</description>
    <errorConditionFormula>IF(TEXT(LeadChannel__c) == &apos;Marketing Lead Converted&apos;, AND(TEXT(LeadStatus__c) == &apos;Close&apos;, OR(ISNULL(CustomerContactDate__c), CustomerContactDate__c &gt; NOW())), FALSE )</errorConditionFormula>
    <errorDisplayField>CustomerContactDate__c</errorDisplayField>
    <errorMessage>Please enter your Customer Contact Date. You cannot enter a date later than the current one.</errorMessage>
</ValidationRule>