force-app/main/default/objects/Sales_Lead__c/validationRules/Contract_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR($Profile.Name == &apos;System Administrator&apos;, $Profile.Name == &apos;시스템 관리자&apos;),false,AND(NOT(ISBLANK(RevenueEndDate__c)), NOT(ISBLANK(RevenueStartDate__c)), RevenueEndDate__c &lt;= RevenueStartDate__c))</errorConditionFormula>
    <errorDisplayField>RevenueEndDate__c</errorDisplayField>
    <errorMessage>Contract End date must be larger than Contract Start date.</errorMessage>
</ValidationRule>