force-app/main/default/objects/Sales_Lead__c/validationRules/Convert_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Convert_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(LeadStage__c) == &apos;Converted&apos;, ISBLANK(OpportunityName__c))</errorConditionFormula>
    <errorMessage>You cannot arbitrarily change the Stage to Converted. Please use the Convert function</errorMessage>
</ValidationRule>