force-app/main/default/objects/Sales_Lead__c/validationRules/Direct_Account_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_Account_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(LeadChannel__c , &apos;Direct Registration&apos;),
   ISBLANK( AccountId__c),
   Owner:User.CompanyCode__c = &apos;T100&apos;,
   RecordType.Name = &apos;IT&apos;
)</errorConditionFormula>
    <errorMessage>Account is madatory in case of Direct Registration</errorMessage>
</ValidationRule>