force-app/main/default/objects/Sales_Lead__c/validationRules/NoneSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>NoneSelected</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(LeadStage__c) &amp;&amp; ISPICKVAL(PRIORVALUE(LeadStage__c ) , &apos;Converted&apos;) &amp;&amp;  ISPICKVAL(LeadStage__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>LeadStage__c</errorDisplayField>
    <errorMessage>None 값으로 선택할 수 없습니다.</errorMessage>
</ValidationRule>