force-app/main/default/objects/Sales_Lead__c/validationRules/Sales_Lead_Null_Fields_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Lead_Null_Fields_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(LeadChannel__c , &apos;Direct Registration&apos;),
OR(ISBLANK( AccountId__c), ISBLANK( Amount__c), ISBLANK( SalesDepartment__c)),
CompanyCode__c = &apos;T100&apos;,
RecordType.Name = &apos;IT&apos; 
)</errorConditionFormula>
    <errorMessage>Amount, Sales Dept. 3, Account and Internal/External fields can&apos;t be null.</errorMessage>
</ValidationRule>