force-app/main/default/objects/Sales_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>LeadStatus__c</columns>
    <columns>LeadStage__c</columns>
    <columns>Amount__c</columns>
    <columns>CloseDate__c</columns>
    <columns>RevenueStartDate__c</columns>
    <columns>RevenueEndDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LeadChannel__c</columns>
    <columns>Description__c</columns>
    <columns>InterestSubject1__c</columns>
    <columns>OwnerEmail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LeadChannel__c</field>
        <operation>equals</operation>
        <value>Marketing Lead Converted</value>
    </filters>
    <label>All Sales Leads</label>
</ListView>