force-app/main/default/objects/Sales_Lead__c/listViews/My_Sales_Leads.listView-meta.xml
<ListView>
    <fullName>My_Sales_Leads</fullName>
    <columns>NAME</columns>
    <columns>LeadSource__c</columns>
    <columns>AccountId__c</columns>
    <columns>LeadStage__c</columns>
    <columns>Amount__c</columns>
    <columns>CloseDate__c</columns>
    <columns>RevenueStartDate__c</columns>
    <columns>RevenueEndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sales Leads</label>
</ListView>